Closed Bug 50427 Opened 25 years ago Closed 25 years ago

URL field spontanously "refreshes" to wrong URL

Categories

(SeaMonkey :: General, defect, P1)

x86
All
defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: spam, Assigned: mscott)

References

Details

(Whiteboard: [nsbeta3+])

saw this in the previous build, and it's still in 2000082513 m18 linux: go to http://www.redhat.com/support/errata/ As the banner on top of page starts loading the URL-bar is refreshed displaying the URL to the banner instead (for instance http://m.doubleclick.net/viewad/400517-zt_banner_60x468.gif) History list doesn't seem to be affected by the bug. And Redhat is no special case, only one of the sites i've seen the phenomena the past 24 hours.
*** Bug 50482 has been marked as a duplicate of this bug. ***
50482 reported for Windows.
Marking All OS's.
OS: Linux → All
*** Bug 50493 has been marked as a duplicate of this bug. ***
Raising severity to major. This one will become a mostfreq in no time unless fixed. Unless users are alert, they also risk bookmarking wrong URLs.
Severity: normal → major
*** Bug 50788 has been marked as a duplicate of this bug. ***
I think the redirect in the image's SRC URL is causing this code to fire an OnLocationChange event: http://lxr.mozilla.org/seamonkey/source/uriloader/base/nsDocLoader.cpp#1392 The chrome gets the onLocationChange notification and updates it's URI incorrectly. CC'ing author of this code.
nice analysis adam. I think this bug belongs to me and dp. This is pretty serious. the good news is I think it should be easy to fix.
Keywords: dogfood, nsbeta3
Priority: P3 → P1
oops...I didn't mean to add the dogfood keyword. Removing that.
Keywords: dogfood
Target Milestone: --- → M18
Assignee: asa → mscott
QA Contact: doronr → tever
well, an engineer needs to own it. mscott, wanna hold on to it?
*** Bug 50756 has been marked as a duplicate of this bug. ***
I thought I already re-assigned it to myself....I guess it didn't go through. Thanks blake.
*** Bug 51017 has been marked as a duplicate of this bug. ***
bumping up priority. this is basically "data loss" as you lose the url of the page you are currently on. you can't reload the page, copy the url, do anything to it. it's gone.
Severity: major → critical
Keywords: correctness
nsbeta3+ per triage meeting.
Status: NEW → ASSIGNED
Whiteboard: [nsbeta3+]
fixed.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
i don't see this bug anymore on linux. 2000090206
verified: WinNT 2000090508 Linux rh6.0 2000090508 Mac OS8.6 2000090508
Status: RESOLVED → VERIFIED
This one seems to have resurfaced. Try go to http://www.digitoday.no/dtno.nsf/wframe/allesaker In NC4.77 that url sticks in URL field. In mozilla it changes to some banner address instead. This messes up bookmarking, history and all pretty much. Tested with current linux CVS.
Never mind. jrgm just filed bug 81769
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.