Bug #50427 --> comment out our OnRedirect implementation. It was causing nasty side effects because we aren't told if the main document url is getting redirected or if a part (like an image) is getting redirected. This caused the urlbar to get incorrectly updated. r=sspitzer